--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -49,3 +49,10 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting"
 ;
+
+.iframe-container {
+  margin: 2px 0px 5px 0px;
+  padding: 3px 5px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+}
