add scrolling option to iframe

--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -2,6 +2,7 @@
   <iframe
     sandbox="allow-popups allow-scripts allow-forms allow-same-origin"
     frameborder="no" scrolling="no" allowfullscreen="true"
+    scrolling="{{ include.scrolling | default: 'no'}}"
     width="{{ include.width | default: '800px'}}"
     height="{{ include.height | default: '500px'}}"
     src="{{ include.src }}">
