--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -189,6 +189,9 @@ pre {
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
   }
+  img {
+    padding: $spacing-unit / 4;
+  }
 }
 
 
