use flexbox for header and footer wrapper

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -175,6 +175,10 @@ pre {
  * Wrapper
  */
 .wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
