--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,12 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <img class="gravatar" style="height: 70px; float: left; margin-left: -120px; padding: 4px 8px;" src="assets/images/stephen-smiling-with-guitar-and-ella-cropped-small.jpg" />
     <div class="site-title">
       <a rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    </div>
+
+    <div class="site-image">
+      <img src="assets/images/stephen-smiling-with-guitar-and-ella-cropped-small.jpg" />
     </div>
 
     {%- if page_paths -%}
