include seamless attribute with iframes

--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -1,5 +1,6 @@
 <div class="iframe-container">
   <iframe
+    seamless
     sandbox="allow-popups allow-scripts allow-forms allow-same-origin"
     frameborder="no" scrolling="no" allowfullscreen="true"
     scrolling="{{ include.scrolling | default: 'no'}}"
