--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,12 @@
-<header class="site-header" role="banner">
+<header class="site-header">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <div class="site-title">
-      <a rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-    </div>
+    {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    <div class="site-image">
-      <img src="/assets/images/stephen-smiling-with-guitar-and-ella-cropped-small.jpg" />
-    </div>
-
-    {%- if page_paths -%}
+    {%- if titles_size > 0 -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
