--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <header>{{ site.title  | escape }}</header>
+        <header class='subtitle'>{{ site.subtitle  | escape }}</header>
         {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
