--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -13,8 +13,12 @@ h3 {
 }
 
 header {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 600;
+  &.subtitle {
+    font-size: 0.95rem;
+    font-weight: 500;
+  }
 }
 
 .post-list > li {
