footer: links to resume, art-and-logic

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,12 +9,13 @@
         <header class='subtitle'>{{ site.subtitle  | escape }}</header>
         {%- if site.author %}
         <ul class="contact-list">
-          {% if site.author.name -%}
-          <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-          <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
+          <li class="p-name">{{ site.author.name | escape }}, <a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+          <li>
+            Links:
+            <a class="u-email" href="{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>,
+            <a class="u-email" href="{{ site.author.resume }}" target="_blank" title="resume">Resume</a>
+          </li>
+
         </ul>
         {%- endif %}
       </div>
