footer links, add home page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,9 @@
           <li class="p-name">{{ site.author.name | escape }}, <a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
           <li>
             Links:
-            <a class="u-email" href="{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>,
-            <a class="u-email" href="{{ site.author.resume }}" target="_blank" title="resume">Resume</a>
+            <a class="u-email" href="https://{{ site.author.home }}" target="_blank" title="Home">Home</a>,
+            <a class="u-email" href="https://{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>,
+            <a class="u-email" href="https://{{ site.author.resume }}" target="_blank" title="resume">Resume</a>
           </li>
 
         </ul>
