--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,12 +9,11 @@
         <header class='subtitle'>{{ site.subtitle  | escape }}</header>
         {%- if site.author %}
         <ul class="contact-list">
-          <li class="p-name">{{ site.author.name | escape }}, <a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+          <li class="p-name"><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
           <li>
-            Links:
-            <a class="u-email" href="https://{{ site.author.home }}" target="_blank" title="Home">Home</a>,
-            <a class="u-email" href="https://{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>,
-            <a class="u-email" href="https://{{ site.author.resume }}" target="_blank" title="resume">Resume</a>
+            <a class="u-email" href="https://{{ site.author.home }}" target="_blank" title="github">github</a>,
+            <a class="u-email" href="https://{{ site.author.resume }}" target="_blank" title="resume">resume</a>,
+            <a class="u-email" href="https://{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>
           </li>
 
         </ul>
