--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 
     {%- include footer.html -%}
 
+    <div id="rel-me-links">
+      <a rel="me" href="https://ruby.social/@stepheneb">Mastodon</a>
+    </div>
   </body>
 
 </html>
