--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -22,8 +22,6 @@ p {
   margin-bottom: 0.5rem;
 }
 
-img {
-}
 header {
   font-size: 1.1rem;
   font-weight: 600;
@@ -70,7 +68,9 @@ header {
         font-size: 1.05rem;
       }
     }
-    .category-name {
-    }
   }
+}
+
+#rel-me-links {
+  visibility: hidden;
 }
