--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <li>
             <a class="u-email" href="https://{{ site.author.home }}" target="_blank" title="github">github</a>,
             <a class="u-email" href="https://{{ site.author.resume }}" target="_blank" title="resume">resume</a>,
-            <a class="u-email" href="https://{{ site.author.consulting }}" target="_blank" title="Art & Logic">Art & Logic (consulting)</a>
+            <a class="u-email" href="https://{{ site.author.consulting }}" target="_blank" title="Imagination & Logic">Imagination  & Logic (consulting)</a>
           </li>
 
         </ul>
