add hachyderm.io/@stepheneb social link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 
     <div id="rel-me-links">
       <a rel="me" href="https://ruby.social/@stepheneb">Mastodon</a>
+      <a rel="me" href="https://hachyderm.io/@stepheneb">Mastodon</a>
     </div>
   </body>
 
